# avrdude

src/: CMakeLists.txt
src/doc/: .gitignore  CMakeLists.txt  gen_doc.sh.in  gen_texi.sh.in
src/doc/generator/: parts.texi  programmer_types.texi  programmers.texi  version.texi
